# UCS_Dev

./: DEPLOYMENT.md  QUICKSTART.md  README.md
QGC_Code/: README.md
QGC_Code/src/UCS/: CMakeLists.txt  UCSApiClient.cc  UCSApiClient.h  UCSManager.cc  UCSManager.h
backend/: .gitignore  pom.xml
backend/src/main/java/com/ucs/: UcsApplication.java
backend/src/main/java/com/ucs/config/: SecurityConfig.java  WebSocketConfig.java
backend/src/main/java/com/ucs/controller/: AuthController.java  LeaderController.java  MapTileController.java  PilotController.java  ScreenController.java  TelemetryController.java  UserController.java
backend/src/main/java/com/ucs/dto/: ApiResponse.java  AssignDroneRequest.java  BatchCommandRequest.java  CommandRequest.java  CreateTaskRequest.java  DroneStatusDTO.java  EventDTO.java  HeatmapPointDTO.java  LoginRequest.java  LoginResponse.java  TaskDTO.java  TaskSummaryDTO.java  TeamInfoDTO.java  TeamMemberDTO.java  TeamStatusDTO.java  UavTelemetryBatchDTO.java  UavTelemetryDTO.java  UserProfileDTO.java  WeatherDTO.java
backend/src/main/resources/: application-local.properties  application-prod.properties  application.properties
docs/: QGC_MODIFICATION_GUIDE.md
frontend/ucs-dashboard/: index.html  package-lock.json  package.json
frontend/ucs-dashboard/src/: App.css  App.tsx  index.css
frontend/ucs-dashboard/src/hooks/: useTelemetryWebSocket.ts
ros2_gateway/: package.xml  setup.cfg  setup.py
ros2_gateway/launch/: gateway.launch.py
ros2_gateway/uav_telemetry_gateway/: __init__.py  gateway_node.py
(+65 files in other folders)
